# Interviewd

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  render-diagram.yml  setup-scripts.yml
config/: default.yaml
config/plans/: pm_behavioral_mid.yaml  swe_technical_senior.yaml
config/questions/: behavioral.yaml  hr.yaml  system_design.yaml  technical.yaml
docs/: architecture.mmd
docs/decisions/: 001-adapter-strategy.md  002-pipeline-vs-live-audio-apis.md  003-litellm-security.md  004-react-realtime-ui.md  005-dual-path-interview-engine.md
docs/sprints/: sprint2.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: AudioRecorder.test.tsx  ModeToggle.test.tsx  PlanCard.test.tsx  ScoreCard.test.tsx  SessionsTable.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentSpeaker.tsx  AudioRecorder.tsx  Layout.tsx  ModeToggle.tsx  PlanCard.tsx  QuestionCard.tsx  ScoreCard.tsx  SessionsTable.tsx
frontend/src/pages/: Dashboard.tsx  Interview.tsx  PracticeSession.tsx  PracticeSetup.tsx  Report.tsx  Sessions.tsx  Setup.tsx
frontend/src/test/: setup.ts
interviewd/: config.py
interviewd/adapters/llm/: base.py  litellm.py  registry.py
interviewd/adapters/stt/: base.py  groq.py  registry.py  (+1 more)
interviewd/cli/: main.py  plan.py  setup.py
interviewd/data/: question_bank.py
interviewd/engine/: interview.py  voice_loop.py
interviewd/planner/: agent.py  ingestion.py  models.py
interviewd/scoring/: scorer.py
interviewd/store/: __init__.py  session_store.py
interviewd/web/: adapters.py  app.py  practice_state.py  state.py
tests/adapters/: test_stt.py  test_tts.py  test_vad.py
tests/cli/: test_cli.py  test_plan_command.py
tests/data/: test_question_bank.py
tests/engine/: test_interview.py  test_voice_loop.py
tests/integration/: test_pipeline.py
tests/planner/: test_agent.py  test_ingestion.py  test_models.py
tests/scoring/: test_scorer.py
tests/store/: test_session_store.py
tests/web/: test_api.py  test_plans_api.py
(+12 files in other folders)
